# aigc2020_scout

./: .gitmodules  99-pixracer-usb-to-uart.rules  README.md  scout_launch_tmux.yaml
astar/: CMakeLists.txt  package.xml
astar/launch/: astar.launch
astar/src/: PathGen.cpp  aStarLibrary.h
astar/src/astar_backup/: PathGen_origin.cpp  package.xml
astar/src/astar_backup/src/: PathGen.cpp  PathGen_backup.cpp  aStarLibrary.h
distance_map/: CMakeLists.txt  package.xml
distance_map/launch/: distance_map.launch
distance_map/src/: distance_map.py  distance_map_class.py
laser_filters/examples/: shadow_filter.yaml
local_map/src/: local_map.cpp
mavros_control/: CMakeLists.txt
mavros_control/launch/: mavros_control_gazebo.launch  node.launch  px4.launch
mission_planner/: CMakeLists.txt  package.xml
mission_planner/launch/: mission_planner_2.launch  mission_planner_aigc_atob_1.launch  mission_planner_aigc_atob_2.launch  mission_planner_csv.launch  mission_planner_fast_2.launch  mission_planner_hyundai.launch  mission_planner_proxima.launch  mission_planner_proxima_1F.launch  mission_planner_proxima_2F.launch  mission_planner_proxima_short.launch  mission_planner_ultra_2.launch
mission_planner/mission_csv/: mission.csv  mission_Bexco.csv  mission_Police_2F.csv  mission_iitp_moving_obs.csv  mission_set0.csv  mission_set1.csv  mission_set2.csv  mission_set3.csv  mission_set4.csv  mission_set5.csv
mission_planner/src/: .mission_plan_node.cpp.swp  DefineList.h  MissionDefine.h  MissionUtil.h  mission_plan_node.cpp
offboard_drone/: CMakeLists.txt  package.xml
offboard_drone/launch/: offboard.launch
offboard_drone/src/: .offboard_node.cpp.swn  .offboard_node.cpp.swo  .offboard_node.swp  SubUtil.h  offboard_node.cpp
path_manager/src/: path_load.py  path_save.py
plot_data/: CMakeLists.txt  package.xml
plot_data/launch/: visual_comp.launch  visual_map.launch  visual_plot.launch
plot_data/mesh/: AIGC_PIPE.dae
plot_data/src/: plot_data_TTA.py
tf_listener/: CMakeLists.txt
tf_listener/launch/: tf.launch
tf_listener/src/: tf_listener.cpp
usb_cam/launch/: usb_cam-record-video.launch  usb_cam-test-4k.launch  usb_cam-test-vga.launch  usb_cam-test.launch
